# StakML

./: .gitignore  CMakeLists.txt  README.md
cuda_sandbox/: NOTES.md  add_bias.cu  matmul.cu  matmul_naive.cu  matmul_tiled.cu  notes.md  relu.cu  relu_backward.cu  vecadd.cu
docs/: 01_tensors.md  02_autograd.md  03_matmul.md  04_layers.md  05_loss.md  06_optimizers.md  07_conv.md
examples/: cifar_cnn.cpp  demo_visual.cpp  football_dataset.hpp  full_tournament.cpp  group_stage.cpp  mnist_mlp.cpp  predict_match.cpp  world_cup.cpp
include/stakml/: cuda_matmul.cuh  dataset.hpp  loss.hpp  nn.hpp  ops.hpp  optim.hpp  serialize.hpp  tensor.hpp
include/stakml/cuda/: Readme.md  matmul.cuh
tests/: bench.cpp  test_conv.cpp  test_graph.cpp  test_opts.cpp
